--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F5F5DC;
+    background-color: #F0F0F0;
     font-family: sans-serif;
 }
 .search {
@@ -9,12 +9,9 @@ body {
     width: 49.5%;
     margin-top: 0px;
     padding: 0px;
-    border-left-style: solid;
-    border-left-color: #A52A2A;
-    border-left-width: thin;
 }
 input {
-    background-color: #F5F5DC;
+    background-color: white;
 }
 footer {
     clear: both;
@@ -29,8 +26,8 @@ footer {
     margin-bottom: 5px;
     padding-bottom: 10px;
     border-bottom-style: solid;
-    border-bottom-color: #A52A2A;
-    border-bottom-width: thin;
+    border-bottom-color: #707070;
+    border-bottom-width: 2px;
     background-color: inherit;
 }
 li {
@@ -41,11 +38,14 @@ li {
     padding: 0px;
 }
 .result > ul > li {
-    margin-top: 5px;
+    margin-top: 20px;
     margin-bottom: 5px;
     border-bottom-style: solid;
-    border-bottom-color: #A52A2A;
-    border-bottom-width: thin;
+    border-bottom-color: #707070;
+    border-bottom-width:2px;
+    border-left-style: solid;
+    border-left-color: #707070;
+    border-left-width: 2px;
     background-color: inherit;
 }
 .title > span {
@@ -62,6 +62,7 @@ li {
     margin-left: 10px;
     display: inline-block;
 }
+
 #advancedSubmit > p {
     display: inline-block;
     margin: 0px;
@@ -75,19 +76,40 @@ li {
 .result > ul > li > .title > label,
 .result > ul > li > .title > p:first-child {
     display: inline-block;
-    float: right;
-    width: 50%;
+    float: left;
+    width: 30%;
 }
 .result > ul > li > .title > label:first-child,
 .result > ul > li > .title > p {
     display: inline-block;
     float: left;
-    width: auto;
+    width: 50%;
     align-items: flex-end;
 }
 .result >ul >li > .data {
     clear: both;
+    padding-top:5px;
 }
+
+.result > ul >li >.data > p{
+    float: left;
+    width: 60%;
+    margin-top: 3px;
+    padding-left:5px;
+}
+
+.result > ul >li >.data > label{
+    display: inline-block;
+    float: left;
+    width: 30%;
+    padding-left:50px;
+}
+
+.result >ul >li > .file{
+    padding-left:60px;
+    padding-bottom:5px;
+}
+
 .advancedSearch h1 {
     cursor: pointer;
 }
@@ -111,4 +133,8 @@ h1.arrowup {
 }
 .clear {
     clear: both;
+}
+
+.picto{
+    float:left;
 }
