--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,24 @@ body {
 }
 .result {
     width: 49.5%;
-    margin-top: 0px;
-    padding: 0px;
+    margin-top: 0%;
+    padding: 0%;
 }
 input {
     background-color: white;
 }
 footer {
     clear: both;
-    padding-top: 10px;
+    padding-top: 1%;
 }
 .search > nav > article >p {
     display: inline-block;
 }
 .search > article,
 .search > nav {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding-bottom: 10px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding-bottom: 3%;
     border-bottom-style: solid;
     border-bottom-color: #707070;
     border-bottom-width: 2px;
@@ -34,12 +34,13 @@ li {
     list-style: none;
 }
 .result > ul {
-    margin: 0px;
-    padding: 0px;
+    margin: 0%;
+    padding: 0%;
 }
 .result > ul > li {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    margin-top: 3%;
+    margin-bottom: 1%;
+     height:auto;
     border-bottom-style: solid;
     border-bottom-color: #707070;
     border-bottom-width:2px;
@@ -52,23 +53,23 @@ li {
     display: inline;
 }
 .result > ul > li > div >label {
-    margin-left: 10px;
+    margin-left: 1%;
     float: left;
     display: inline;
 }
 .result > ul > li> .title > p {
     align-items: flex-end;
-    margin-top: 0px;
-    margin-left: 10px;
+    margin-top: 0%;
+    margin-left: 1%;
     display: inline-block;
 }
 
 #advancedSubmit > p {
     display: inline-block;
-    margin: 0px;
+    margin: 0%;
 }
 .subfacet {
-    margin-left: 30px;
+    margin-left: 3%;
 }
 #advancedSubmit .city select {
     text-transform: capitalize;
@@ -88,26 +89,39 @@ li {
 }
 .result >ul >li > .data {
     clear: both;
-    padding-top:5px;
+    float:left;
+    width:100%;
+    display: inline-block;
+    padding-top: 0.5%;
+}
+
+.result >ul >li > .title {
+    clear: both;
+    float:left;
+    width:100%;
+    display: inline-block;
+    padding-top: 0.5%;
 }
 
 .result > ul >li >.data > p{
     float: left;
+    display: inline-block;
     width: 60%;
-    margin-top: 3px;
-    padding-left:5px;
+    margin-top: 0.3%;
+    padding-left:0.5%;
 }
 
 .result > ul >li >.data > label{
     display: inline-block;
     float: left;
     width: 30%;
-    padding-left:50px;
+    padding-left:7.5%;
 }
 
 .result >ul >li > .file{
-    padding-left:60px;
-    padding-bottom:5px;
+    padding-left:8%;
+    padding-bottom:0.5%;
+    display: inline-block;
 }
 
 .advancedSearch h1 {
