--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,10 @@ li {
 .result > ul > li {
     margin-top: 3%;
     margin-bottom: 1%;
-     height:auto;
+    height: auto;
     border-bottom-style: solid;
     border-bottom-color: #707070;
-    border-bottom-width:2px;
+    border-bottom-width: 2px;
     border-left-style: solid;
     border-left-color: #707070;
     border-left-width: 2px;
@@ -52,18 +52,6 @@ li {
 .title > span {
     display: inline;
 }
-.result > ul > li > div >label {
-    margin-left: 1%;
-    float: left;
-    display: inline;
-}
-.result > ul > li> .title > p {
-    align-items: flex-end;
-    margin-top: 0%;
-    margin-left: 1%;
-    display: inline-block;
-}
-
 #advancedSubmit > p {
     display: inline-block;
     margin: 0%;
@@ -74,56 +62,48 @@ li {
 #advancedSubmit .city select {
     text-transform: capitalize;
 }
-.result > ul > li > .title > label,
-.result > ul > li > .title > p:first-child {
+.result > ul > li > .title > label {
     display: inline-block;
     float: left;
-    width: 30%;
+    width: 140px;
+    margin-bottom: 5px;
 }
-.result > ul > li > .title > label:first-child,
 .result > ul > li > .title > p {
+  align-items: flex-end;
+  display: inline-block;
+  float: left;
+  margin: 0 0 5px;
+  width: calc(100% - 198px);
+}
+.result > ul > li > .data {
     display: inline-block;
-    float: left;
+    padding-left: 60px;
     width: 50%;
-    align-items: flex-end;
 }
-.result >ul >li > .data {
+.result > ul > li > .title {
     clear: both;
-    float:left;
-    width:100%;
-    display: inline-block;
-    padding-top: 0.5%;
-}
-
-.result >ul >li > .title {
-    clear: both;
-    float:left;
-    width:100%;
-    display: inline-block;
-    padding-top: 0.5%;
-}
-
-.result > ul >li >.data > p{
-    float: left;
-    display: inline-block;
-    width: 60%;
-    margin-top: 0.3%;
-    padding-left:0.5%;
-}
-
-.result > ul >li >.data > label{
     display: inline-block;
     float: left;
-    width: 30%;
-    padding-left:7.5%;
+    margin: 0 0 10px;
+    width: 100%;
 }
-
-.result >ul >li > .file{
-    padding-left:8%;
-    padding-bottom:0.5%;
+.result > ul > li > .data > p {
+    display: inline-block;
+    float: left;
+    margin: 0 0 5px;
+    width: calc(100% - 140px);
+}
+.result > ul > li > .data > label {
+    display: inline-block;
+    float: left;
+    width: 140px;
+    margin: 0 0 5px;
+}
+.result >ul >li > .file {
+    padding-left: 8%;
+    padding-bottom: 0.5%;
     display: inline-block;
 }
-
 .advancedSearch h1 {
     cursor: pointer;
 }
@@ -148,7 +128,7 @@ h1.arrowup {
 .clear {
     clear: both;
 }
-
-.picto{
-    float:left;
+.picto {
+    float: left;
+    margin: 0 5px;
 }
