--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,11 @@ li {
     margin-bottom: 5px;
 }
 .result > ul > li > .title > p {
-  align-items: flex-end;
-  display: inline-block;
-  float: left;
-  margin: 0 0 5px;
-  width: calc(100% - 198px);
+    align-items: flex-end;
+    display: inline-block;
+    float: left;
+    margin: 0 0 5px;
+    width: calc(100% - 198px);
 }
 .result > ul > li > .data {
     display: inline-block;
@@ -99,10 +99,13 @@ li {
     width: 140px;
     margin: 0 0 5px;
 }
-.result >ul >li > .file {
-    padding-left: 8%;
-    padding-bottom: 0.5%;
-    display: inline-block;
+.result > ul > li > .file {
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+}
+.file > a {
+    text-decoration: none;
 }
 .advancedSearch h1 {
     cursor: pointer;
