--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
-    background-color: #e5e5e5;
-    font-family: sans-serif;
-    color: #1d1d1d;
+    background-color: #E5E5E5;
+    color: #1D1D1D;
+    font-family: Helvetica, Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: 100;
 }
 p {
     margin: 0;
@@ -31,9 +33,9 @@ footer {
     display: inline-block;
 }
 .search > nav > article.pageNav > p {
-  display: block;
-  margin-bottom: 20px;
-  width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    width: 100%;
 }
 .search > article,
 .search > nav {
@@ -78,7 +80,7 @@ li {
 }
 #advancedSubmit > p {
     display: inline-block;
-    margin: 0%;
+    margin: 0 0 10px;
 }
 #advancedSubmit input {
     float: right;
