--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ input {
 select {
     background-color: white;
     border: 1px solid #808080;
-    cursor:  pointer;
+    cursor: pointer;
 }
 footer {
     clear: both;
@@ -81,7 +81,6 @@ li {
     border-left-color: #808080;
     border-left-width: 2px;
     background-color: inherit;
-    cursor:  pointer;
 }
 .title > span {
     display: inline;
@@ -104,6 +103,7 @@ li {
     float: left;
     width: 140px;
     margin-bottom: 5px;
+    cursor: pointer;
 }
 .result > ul > li > .title > p {
     align-items: flex-end;
@@ -114,13 +114,17 @@ li {
 }
 .result > ul > li > .data {
     display: inline-block;
-    padding-left: 60px;
+    padding: 5px 0 0 60px;
     width: 50%;
 }
 .result > ul > li > .title {
     display: inline-block;
-    margin: 0 0 10px;
+    padding: 0 0 10px;
     width: 100%;
+    cursor: pointer;
+}
+.title.active {
+    border-bottom: 1px dashed white;
 }
 .result > ul > li > .data > p {
     display: inline-block;
@@ -169,7 +173,7 @@ h2.arrowup {
 .picto {
     float: left;
     margin: 0 5px;
-    border:1px solid black;
+    border: 1px solid black;
 }
 .pageNav input {
     width: 120px;
@@ -185,17 +189,17 @@ input[type="submit"] {
     width: 120px;
     float: right;
     margin-left: 5px;
-    cursor:  pointer;
+    cursor: pointer;
 }
 input#previous,
 input#firstPage {
     float: left;
     margin-right: 5px;
-    cursor:  pointer;
+    cursor: pointer;
 }
 input#next,
 input#lastPage {
     float: right;
     margin-left: 5px;
-    cursor:  pointer;
+    cursor: pointer;
 }
